--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,19 +1,24 @@
 {
   "app": {
-    "title": "Azure OpenAI 通道模型面板",
-    "subtitle": "先在顶部维护一份总模型清单，然后通过点击为每个账号 / 区域分配可用模型，自动生成账号级和全局可用模型列表（每个模型名后接逗号，方便复制粘贴）。"
+    "title": "Azure AI Foundry 管理面板",
+    "subtitle": "先在顶部维护一份总模型清单，然后通过点击为每个账号 / 区域分配可用模型，自动生成账号级和全局可用模型列表（每个模型名后接逗号，方便复制粘贴）。",
+    "description": "先在顶部维护一份总模型清单，然后通过点击为每个账号 / 区域分配可用模型，自动生成账号级和全局可用模型列表（每个模型名后接逗号，方便复制粘贴）。"
+  },
+  "footer": {
+    "copyright": "2024 ZetaTechs",
+    "author": "作者：赵利利"
   },
   "masterModels": {
     "title": "全局模型目录",
     "description": "在此一次性维护所有可能用到的模型（使用逗号、空格或换行分隔）。下方账号 / 区域的模型都通过点击选择，不再重复输入。",
     "placeholder": "例如：gpt-4o, gpt-4o-mini, gpt-4.1, gpt-35-turbo, o1-mini ...",
-    "parsedCount": "已解析模型数",
-    "copyButton": "复制目录列表（带逗号）"
+    "parsedCount": "已解析模型：{{count}} 个",
+    "copyList": "复制目录列表（带逗号）"
   },
   "dashboard": {
     "title": "可视化概览",
-    "accounts": "账号数",
-    "regions": "区域数",
+    "accountCount": "账号数",
+    "regionCount": "区域数",
     "regionsWithModels": "有配置模型的区域",
     "avgModelsPerRegion": "每区域平均模型数",
     "masterModelsCount": "全局目录模型数",
@@ -22,46 +27,107 @@
     "singleRegionModels": "仅 1 区域使用的模型"
   },
   "coverage": {
-    "regionTitle": "区域覆盖度（模型占比）",
-    "regionDescription": "各区域覆盖全局目录的比例",
-    "modelTitle": "模型覆盖度（区域占比）",
-    "modelDescription": "每个模型在多少个区域启用"
+    "regionCoverage": "区域覆盖度（模型占比）",
+    "regionCoverageDesc": "各区域覆盖全局目录的比例",
+    "modelCoverage": "模型覆盖度（区域占比）",
+    "modelCoverageDesc": "每个模型在多少个区域启用",
+    "noRegionsOrEmptyMaster": "暂无区域或全局目录为空，无法计算覆盖度。",
+    "noModelsOrNoMatch": "暂无模型或当前筛选条件下没有匹配的模型。",
+    "filterAll": "全部状态",
+    "filterUnused": "未使用",
+    "filterSingle": "仅 1 区域",
+    "filterMulti": "多区域",
+    "viewAll": "全部"
   },
   "accounts": {
-    "title": "本地 Azure 账号配置",
+    "title": "Azure 账号配置",
     "description": "为每个账号添加区域，并通过点击选择可用模型。所有配置存储在浏览器 localStorage 中。",
     "addAccount": "新增账号",
     "exportConfig": "导出配置（JSON）",
     "importConfig": "导入配置",
-    "accountName": "账号名称",
-    "accountNote": "备注（可选）",
+    "accountName": "账号名称：",
+    "accountNamePlaceholder": "例如：Prod-Subscription-AzureOpenAI",
+    "note": "备注（可选）：",
+    "notePlaceholder": "例如：租户 ID、订阅 ID 等",
     "deleteAccount": "删除账号",
-    "enableAccount": "参与统计 / 启用账号"
+    "enableAccount": "参与统计 / 启用账号",
+    "account": "账号",
+    "modelSearch": "模型搜索：",
+    "searchPlaceholder": "按模型关键字过滤，例如：gpt-4o"
   },
   "regions": {
-    "title": "区域列表",
+    "regionList": "区域列表",
     "addRegion": "新增区域",
     "regionName": "区域名称",
-    "endpoint": "Azure OpenAI Endpoint",
-    "apiKey": "Azure OpenAI API Key",
-    "models": "模型（点击切换选中状态）",
+    "regionNamePlaceholder": "例如：eastus、swedencentral",
+    "openaiEndpoint": "OpenAI Endpoint",
+    "anthropicEndpoint": "Anthropic Endpoint",
+    "apiKey": "API Key",
+    "apiKeyPlaceholder": "API 密钥",
+    "modelsToggle": "模型（点击切换选中状态）",
     "selectAll": "全选",
-    "clearAll": "清空",
+    "selectCategory": "选择此类",
+    "clear": "清空",
     "deleteRegion": "删除区域",
-    "selectedModels": "已选模型数",
-    "copyModels": "复制本区域模型"
+    "selectedCount": "已选：{{count}} 个",
+    "copyRegionModels": "复制本区域模型",
+    "noRegions": "暂无区域，请点击\"新增区域\"开始配置。",
+    "configureMasterFirst": "请先在顶部配置\"全局模型目录\"，然后再为区域点选模型。",
+    "noMatchingModels": "当前搜索条件下没有匹配的模型。",
+    "region": "区域",
+    "unnamed": "未命名",
+    "enableRegion": "启用区域（参与统计）"
+  },
+  "modelCategory": {
+    "standard": "常规模型 (OpenAI 系列 + 其他模型)",
+    "sora": "Sora 系列",
+    "claude": "Claude 系列"
   },
   "models": {
-    "overview": "模型总览",
-    "search": "模型搜索",
-    "searchPlaceholder": "按模型关键字过滤，例如：gpt-4o",
-    "clearFilter": "清除",
-    "status": {
-      "all": "全部状态",
-      "unused": "未使用",
-      "single": "仅 1 区域",
-      "multi": "多区域"
+    "title": "模型总览",
+    "showingCount": "当前展示 {{showing}} 个模型（共 {{total}} 个），可通过上方的「模型搜索」和状态筛选快速定位。",
+    "emptyMaster": "暂无模型，请先在全局模型目录中配置模型。",
+    "noMatch": "当前筛选条件下没有匹配的模型，请调整搜索或状态筛选。",
+    "modelId": "模型 ID",
+    "status": "状态",
+    "regionCoverage": "覆盖区域数",
+    "coverageRate": "覆盖率",
+    "statusUnused": "未使用",
+    "statusSingle": "仅 1 区域",
+    "statusMulti": "多区域"
+  },
+  "summary": {
+    "byAccount": "按账号聚合",
+    "account": "账号",
+    "regionCount": "区域数：{{count}}，",
+    "modelCount": "模型总数：{{count}}",
+    "modelList": "的模型列表",
+    "copyAccountModels": "复制该账号所有模型（带逗号）",
+    "globalTitle": "全局模型汇总",
+    "totalModels": "全部账号总模型数：{{count}}",
+    "globalModelList": "全局可用模型列表",
+    "copyAllModels": "复制全部模型列表（带逗号）",
+    "series": "系列"
+  },
+  "confirmDialog": {
+    "deleteAccount": {
+      "title": "删除账号",
+      "description": "确定要删除此账号吗？此操作无法撤销，账号下的所有区域配置也将被删除。"
+    },
+    "deleteRegion": {
+      "title": "删除区域",
+      "description": "确定要删除此区域吗？此操作无法撤销。"
     }
+  },
+  "export": {
+    "securityWarning": "安全提示",
+    "securityDescription": "导出的配置文件包含敏感信息（API Key），请妥善保管，不要分享给他人。",
+    "proceed": "继续导出"
+  },
+  "theme": {
+    "light": "浅色",
+    "dark": "深色",
+    "system": "跟随系统"
   },
   "toast": {
     "copied": "已复制",
@@ -79,6 +145,21 @@
     "save": "保存",
     "delete": "删除",
     "edit": "编辑",
-    "close": "关闭"
+    "close": "关闭",
+    "clear": "清除",
+    "show": "显示",
+    "hide": "隐藏",
+    "noData": "暂无数据"
+  },
+  "statistics": {
+    "deploymentStatus": "部署状态分布",
+    "categoryDistribution": "模型分类分布",
+    "coverageDistribution": "覆盖率分布",
+    "totalModels": "个模型",
+    "deployed": "已部署",
+    "unused": "未使用",
+    "accountDistribution": "账号模型分布",
+    "accountDistributionDesc": "各账号拥有的模型数量",
+    "regionDeployment": "区域部署概览"
   }
 }
