Improve table alignment and add summary row
Added text-center classes to table columns in ModelOverviewTable and ModelStatisticsTable for better alignment. Introduced a summary row to ModelStatisticsTable displaying totals and averages. Updated GlobalSummary section styling and added 'modelsLabel' to i18n files for both English and Chinese.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -223,6 +223,7 @@
     "deployedAccounts": "Accounts",
     "columnRegions": "Regions",
     "columnCoverage": "Coverage",
-    "noModels": "No models yet. Please configure models in Global Model Directory first."
+    "noModels": "No models yet. Please configure models in Global Model Directory first.",
+    "modelsLabel": "models"
   }
 }
