Add UI components and enhance dashboard features
Introduced new UI components (Tooltip, EmptyState, SortIndicator, CommandPalette, KeyboardShortcutsHelp) and hooks (useAuditLog, useConfigHistory). Updated App.tsx and several dashboard components to support command palette, keyboard shortcuts, accessibility improvements, and enhanced table features. Added OpenSpec documentation, design, proposal, and tasks for a comprehensive UI/feature improvement plan.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -184,6 +184,17 @@
     "noData": "No data",
     "clickToCopy": "Click to copy"
   },
+  "emptyState": {
+    "noAccounts": "No Accounts",
+    "noAccountsDesc": "Click the button above to add your first Azure account",
+    "noRegions": "No Regions",
+    "noRegionsDesc": "Click the button below to add your first region",
+    "noModels": "No Models",
+    "noModelsDesc": "Please configure models in Global Model Directory first",
+    "noMatchingModels": "No Matching Models",
+    "noMatchingModelsDesc": "No models match the current filter. Please adjust your search criteria",
+    "clearFilters": "Clear Filters"
+  },
   "statistics": {
     "deploymentStatus": "Deployment Status",
     "categoryDistribution": "Category Distribution",
@@ -207,6 +218,140 @@
     "doubleClickToLocate": "Double-click to locate account",
     "total": "Total",
     "accountsLabel": "accounts"
+  },
+  "configHistory": {
+    "title": "Configuration History",
+    "description": "View and restore previous configuration versions",
+    "saveNow": "Save Now",
+    "clearAll": "Clear All",
+    "noVersions": "No history versions",
+    "noVersionsHint": "Changes will be saved automatically",
+    "autoSave": "Auto",
+    "current": "Current",
+    "restore": "Restore",
+    "delete": "Delete",
+    "hint": "Keep up to 20 versions, 10 auto-saves max",
+    "confirmRestore": "Confirm Restore",
+    "confirmRestoreDesc": "Restoring this version will overwrite current configuration. This cannot be undone. Continue?",
+    "confirmDelete": "Confirm Delete",
+    "confirmDeleteDesc": "Are you sure you want to delete this version? This cannot be undone.",
+    "confirmClearAll": "Confirm Clear All",
+    "confirmClearAllDesc": "Are you sure you want to clear all history versions? This cannot be undone.",
+    "openHistory": "Config History",
+    "manualSave": "Manual Save"
+  },
+  "commandPalette": {
+    "title": "Command Palette",
+    "placeholder": "Search commands...",
+    "searchLabel": "Search commands",
+    "noResults": "No matching commands found",
+    "navigate": "Navigate",
+    "execute": "Execute",
+    "hint": "Type keywords to search commands",
+    "openPalette": "Open command palette",
+    "goToOverview": "Go to Overview",
+    "goToAccounts": "Go to Accounts",
+    "goToModels": "Go to Models",
+    "addAccount": "Add Account",
+    "exportConfig": "Export Configuration",
+    "importConfig": "Import Configuration",
+    "toggleTheme": "Toggle Theme",
+    "togglePrivacy": "Toggle Privacy Mode",
+    "toggleLanguage": "Toggle Language",
+    "showShortcuts": "Show Keyboard Shortcuts"
+  },
+  "accessibility": {
+    "skipToContent": "Skip to main content",
+    "headerNav": "Page settings",
+    "githubLink": "View project on GitHub",
+    "filterResults": "Filter results: {{count}} items"
+  },
+  "shortcuts": {
+    "title": "Keyboard Shortcuts",
+    "action": "Actions",
+    "navigation": "Navigation",
+    "settings": "Settings",
+    "general": "General",
+    "macHint": "On Mac, use ⌘ (Command) instead of Ctrl",
+    "windowsHint": "Use Ctrl as the modifier key",
+    "closeHint": "Press Esc or ? to close this dialog",
+    "exportConfig": "Export configuration",
+    "importConfig": "Import configuration",
+    "closeDialog": "Close dialog",
+    "showHelp": "Show keyboard shortcuts",
+    "toggleTheme": "Toggle theme",
+    "togglePrivacy": "Toggle privacy mode"
+  },
+  "auditLog": {
+    "title": "Audit Log",
+    "description": "View recent operation records",
+    "noEntries": "No operation records",
+    "clearAll": "Clear Log",
+    "undo": "Undo",
+    "redo": "Redo",
+    "justNow": "Just now",
+    "minutesAgo": "{{count}} minutes ago",
+    "hoursAgo": "{{count}} hours ago",
+    "daysAgo": "{{count}} days ago",
+    "actions": {
+      "account:create": "Create account",
+      "account:update": "Update account",
+      "account:delete": "Delete account",
+      "account:enable": "Enable account",
+      "account:disable": "Disable account",
+      "region:create": "Create region",
+      "region:update": "Update region",
+      "region:delete": "Delete region",
+      "region:enable": "Enable region",
+      "region:disable": "Disable region",
+      "models:update": "Update models",
+      "models:add": "Add models",
+      "models:remove": "Remove models",
+      "config:import": "Import config",
+      "config:export": "Export config",
+      "config:restore": "Restore config",
+      "masterModels:update": "Update master models"
+    }
+  },
+  "modelStatus": {
+    "stable": "Stable",
+    "new": "New",
+    "deprecated": "Deprecated",
+    "preview": "Preview",
+    "legacy": "Legacy",
+    "stableDesc": "Officially released stable version",
+    "newDesc": "Newly released model",
+    "deprecatedDesc": "Being discontinued, migration recommended",
+    "previewDesc": "Preview version, features may change",
+    "legacyDesc": "Old version, upgrade recommended"
+  },
+  "notification": {
+    "quotaLow": "Low Quota",
+    "quotaLowDesc": "Account {{account}} has reached {{rate}}% quota usage",
+    "balanceLow": "Low Balance",
+    "balanceLowDesc": "Account {{account}} has low available balance",
+    "expirationWarning": "Expiring Soon",
+    "expirationWarningDesc": "Account {{account}} will expire in {{days}} days",
+    "configSaved": "Config Saved",
+    "configSavedDesc": "Your configuration has been saved successfully",
+    "configRestored": "Config Restored",
+    "configRestoredDesc": "Restored to the selected version",
+    "copySuccess": "Copied",
+    "copyFailed": "Copy failed",
+    "importSuccess": "Import successful",
+    "importFailed": "Import failed",
+    "exportSuccess": "Export successful",
+    "exportFailed": "Export failed",
+    "viewDetails": "View Details"
+  },
+  "filterBar": {
+    "presets": "Presets",
+    "allItems": "All",
+    "filtersApplied": "Filters applied",
+    "savePreset": "Save as Preset",
+    "presetName": "Preset Name",
+    "noPresets": "No presets",
+    "builtIn": "Built-in"
   },
   "modelStatistics": {
     "title": "Model Statistics",
