--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -184,6 +184,17 @@
     "noData": "暂无数据",
     "clickToCopy": "点击复制"
   },
+  "emptyState": {
+    "noAccounts": "暂无账号",
+    "noAccountsDesc": "点击上方按钮添加您的第一个 Azure 账号",
+    "noRegions": "暂无区域",
+    "noRegionsDesc": "点击下方按钮添加您的第一个区域",
+    "noModels": "暂无模型",
+    "noModelsDesc": "请先在全局模型目录中配置模型",
+    "noMatchingModels": "未找到匹配的模型",
+    "noMatchingModelsDesc": "当前筛选条件下没有匹配的模型，请调整搜索条件",
+    "clearFilters": "清除筛选"
+  },
   "statistics": {
     "deploymentStatus": "部署状态分布",
     "categoryDistribution": "模型分类分布",
@@ -207,6 +218,140 @@
     "doubleClickToLocate": "双击定位到账号配置",
     "total": "合计",
     "accountsLabel": "个账号"
+  },
+  "configHistory": {
+    "title": "配置版本历史",
+    "description": "查看和恢复之前的配置版本",
+    "saveNow": "立即保存",
+    "clearAll": "清空历史",
+    "noVersions": "暂无历史版本",
+    "noVersionsHint": "配置变更时会自动保存",
+    "autoSave": "自动",
+    "current": "当前",
+    "restore": "恢复",
+    "delete": "删除",
+    "hint": "最多保留 20 个版本，自动保存最多 10 个",
+    "confirmRestore": "确认恢复",
+    "confirmRestoreDesc": "恢复此版本将覆盖当前配置，此操作无法撤销。确定要继续吗？",
+    "confirmDelete": "确认删除",
+    "confirmDeleteDesc": "确定要删除此版本吗？此操作无法撤销。",
+    "confirmClearAll": "确认清空",
+    "confirmClearAllDesc": "确定要清空所有历史版本吗？此操作无法撤销。",
+    "openHistory": "配置历史",
+    "manualSave": "手动保存"
+  },
+  "commandPalette": {
+    "title": "命令面板",
+    "placeholder": "搜索命令...",
+    "searchLabel": "搜索命令",
+    "noResults": "未找到匹配的命令",
+    "navigate": "导航",
+    "execute": "执行",
+    "hint": "输入关键字搜索命令",
+    "openPalette": "打开命令面板",
+    "goToOverview": "跳转到概览",
+    "goToAccounts": "跳转到账号配置",
+    "goToModels": "跳转到模型总览",
+    "addAccount": "新增账号",
+    "exportConfig": "导出配置",
+    "importConfig": "导入配置",
+    "toggleTheme": "切换主题",
+    "togglePrivacy": "切换隐私模式",
+    "toggleLanguage": "切换语言",
+    "showShortcuts": "显示快捷键帮助"
+  },
+  "accessibility": {
+    "skipToContent": "跳转到主要内容",
+    "headerNav": "页面设置",
+    "githubLink": "在 GitHub 上查看项目",
+    "filterResults": "筛选结果：{{count}} 个项目"
+  },
+  "shortcuts": {
+    "title": "键盘快捷键",
+    "action": "操作",
+    "navigation": "导航",
+    "settings": "设置",
+    "general": "通用",
+    "macHint": "在 Mac 上，使用 ⌘ (Command) 代替 Ctrl",
+    "windowsHint": "使用 Ctrl 作为修饰键",
+    "closeHint": "按 Esc 或 ? 关闭此对话框",
+    "exportConfig": "导出配置",
+    "importConfig": "导入配置",
+    "closeDialog": "关闭对话框",
+    "showHelp": "显示快捷键帮助",
+    "toggleTheme": "切换主题",
+    "togglePrivacy": "切换隐私模式"
+  },
+  "auditLog": {
+    "title": "操作日志",
+    "description": "查看最近的操作记录",
+    "noEntries": "暂无操作记录",
+    "clearAll": "清空日志",
+    "undo": "撤销",
+    "redo": "重做",
+    "justNow": "刚刚",
+    "minutesAgo": "{{count}} 分钟前",
+    "hoursAgo": "{{count}} 小时前",
+    "daysAgo": "{{count}} 天前",
+    "actions": {
+      "account:create": "创建账号",
+      "account:update": "更新账号",
+      "account:delete": "删除账号",
+      "account:enable": "启用账号",
+      "account:disable": "禁用账号",
+      "region:create": "创建区域",
+      "region:update": "更新区域",
+      "region:delete": "删除区域",
+      "region:enable": "启用区域",
+      "region:disable": "禁用区域",
+      "models:update": "更新模型",
+      "models:add": "添加模型",
+      "models:remove": "移除模型",
+      "config:import": "导入配置",
+      "config:export": "导出配置",
+      "config:restore": "恢复配置",
+      "masterModels:update": "更新全局模型"
+    }
+  },
+  "modelStatus": {
+    "stable": "稳定版",
+    "new": "新模型",
+    "deprecated": "已弃用",
+    "preview": "预览版",
+    "legacy": "旧版本",
+    "stableDesc": "正式发布的稳定版本",
+    "newDesc": "最新发布的模型",
+    "deprecatedDesc": "即将停用，建议迁移",
+    "previewDesc": "预览版，功能可能变更",
+    "legacyDesc": "旧版本，建议升级"
+  },
+  "notification": {
+    "quotaLow": "额度不足",
+    "quotaLowDesc": "账号 {{account}} 的额度使用率已达 {{rate}}%",
+    "balanceLow": "余额不足",
+    "balanceLowDesc": "账号 {{account}} 的可用余额较低",
+    "expirationWarning": "即将过期",
+    "expirationWarningDesc": "账号 {{account}} 将在 {{days}} 天后过期",
+    "configSaved": "配置已保存",
+    "configSavedDesc": "您的配置已成功保存",
+    "configRestored": "配置已恢复",
+    "configRestoredDesc": "已恢复到选中的版本",
+    "copySuccess": "复制成功",
+    "copyFailed": "复制失败",
+    "importSuccess": "导入成功",
+    "importFailed": "导入失败",
+    "exportSuccess": "导出成功",
+    "exportFailed": "导出失败",
+    "viewDetails": "查看详情"
+  },
+  "filterBar": {
+    "presets": "预设",
+    "allItems": "全部",
+    "filtersApplied": "已应用筛选",
+    "savePreset": "保存为预设",
+    "presetName": "预设名称",
+    "noPresets": "暂无预设",
+    "builtIn": "内置"
   },
   "modelStatistics": {
     "title": "模型总览",
