Add detail views and filter-aware totals to tables
Introduces detail view dialogs for account and model overview tables, allowing full-screen display and improved data analysis. Table summary rows now dynamically reflect filtered data, and Dialog component supports larger sizes ('xl', 'full'). Internationalization updated for new UI elements. Refactors ModelOverviewTable and ModelStatisticsTable to support detail mode and correct summary calculations.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -182,7 +182,9 @@
     "show": "Show",
     "hide": "Hide",
     "noData": "No data",
-    "clickToCopy": "Click to copy"
+    "clickToCopy": "Click to copy",
+    "detail": "Details",
+    "filteredTotal": "Filtered Total"
   },
   "emptyState": {
     "noAccounts": "No Accounts",
